--- a/person_overseas.html
+++ b/person_overseas.html
@@ -350,11 +350,14 @@
 <div id="page">
 
     <div class="employ-banner">
-        <img class="hidden-xs hidden-sm" src="images/Overseas.png" width="100%"/>
+        <!--banner-->
+        <img class="hidden-xs hidden-sm" :src="lunbo.imgPath" width="100%"/>
+        <!--视频-->
         <div class="same-player employ-player mob-employ-player" id="playEmploy">
-            <video class="same-video" src="images/banner.mp4"></video>
+            <video class="same-video" :src="videoList.videoPath"></video>
             <a data-toggle="modal" data-target="#videoplaybox"> <img src="images/play.jpg" class="videoed"/></a>
         </div>
+
     </div>
 
     <div class="modal fade" id="videoplaybox" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static"
@@ -601,6 +604,7 @@
             </div>
         </div>
         <!--PC端可见end-->
+
         <!--移动端可见start-->
         <div class="row visible-xs visible-sm">
             <div class="mobile-overseas container animate-box mid-box">
@@ -735,6 +739,7 @@
             </div>
         </div>
         <!--移动端可见end-->
+
         <!--联系方式start-->
         <div class="contact-mt">
             <div class="row copyright">
@@ -842,10 +847,26 @@
             page1:1,
             rows1:10,
             live1:0,
+
+            // banner
+            lunbo:[],
+            pageBanner:1, //页码
+            rowsBanner:10, //每页条数
+            liveBanner:0, //未冻结 1冻结
+            selectAddr:2, //banner图  1--首页  2--人才招聘  3--社会招聘 4--海科学院
+
+            // 视频列表
+            videoList:[],
+            pageVideo:1,
+            rowsVideo:10,
+            liveVideo:0,
+            otherShow:3,//1-首页；2--海科视角-新闻媒体-宣传片 3--人才招聘-海外人才招进 4--人才招聘-校园招聘
         },
         mounted(){
             this.getZuji()
             this.getGangwei()
+            this.getVideo()
+            this.getLunbo()
         },
         methods: {
             getZuji(){
@@ -853,8 +874,8 @@
                 $.ajax({
                     url: api+`/footprint/frontEndList/${this.page1}/${this.rows1}/${this.live1}`,
                     success: (res) => {
-                        console.log(res.resultObject);
-                        this.zuji = res.resultObject
+                        var res = JSON.parse(res)
+                        this.zuji = res.data.rows
                         console.log(this.zuji);
                     }
                 })
@@ -870,7 +891,35 @@
                         console.log(this.gangwei);
                     }
                 })
-            }
+            },
+
+            // 视频列表 36
+            getVideo(){
+                // '/newsType/'+this.type
+                $.ajax({
+                    url: api+`/haikeVideo/frontEndList/${this.pageVideo}/${this.rowsVideo}/${this.liveVideo}/${this.otherShow}`,
+                    success: (res) => {
+                        var res = JSON.parse(res)
+                        this.videoList = res.data.rows[0]
+                        console.log(this.videoList);
+                    }
+                })
+            },
+
+            // 首页轮播
+            getLunbo(){
+                $.ajax({
+                    url:api+`/bannerShow/frontEndList/${this.pageBanner}/${this.rowsBanner}/${this.liveBanner}/${this.selectAddr}`,
+                    success: (res) => {
+                        var res = JSON.parse(res)
+                        this.lunbo = res.data.rows[0]
+                        console.log(this.lunbo);
+                    },
+                    error(err){
+                        console.log(err);
+                    }
+                })
+            },
         }
     })
 </script>
